--- a/index.html
+++ b/index.html
@@ -362,7 +362,7 @@
 
     
 
-<!-- Team (Static 3-up) -->
+<!-- Team -->
 <section id="team" class="py-20 sm:py-28 bg-gradient-to-b from-white to-efly/[0.04] border-t border-slate-200">
   <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
     <div class="flex items-end justify-between gap-4">
@@ -373,7 +373,7 @@
     </div>
 
     <div class="mt-8 grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-8">
-      <!-- Adrian -->
+
       <div class="rounded-2xl overflow-hidden border border-slate-200 bg-white shadow-soft p-6 text-center transition hover:-translate-y-0.5 hover:shadow-lg">
         <img src="https://cdn.prod.website-files.com/651e9b7ad3f55464374d3cbf/6825f702180be25a62e77e3c_Adi.png"
              alt="Adrian Aubele"
@@ -382,16 +382,15 @@
         <p class="text-sm text-slate-600">Prokurist</p>
       </div>
 
-      <!-- Moritz -->
+
       <div class="rounded-2xl overflow-hidden border border-slate-200 bg-white shadow-soft p-6 text-center transition hover:-translate-y-0.5 hover:shadow-lg">
         <img src="https://cdn.prod.website-files.com/651e9b7ad3f55464374d3cbf/6825f63627a7ba28632f9a55_Moritz.png"
-             alt="Moritz"
+             alt="Moritz Heller"
              class="mx-auto h-56 w-56 object-cover rounded-full" />
-        <h3 class="mt-6 font-semibold text-slate-900">Moritz</h3>
+        <h3 class="mt-6 font-semibold text-slate-900">Moritz Heller</h3>
         <p class="text-sm text-slate-600">Geschäftsführung</p>
       </div>
 
-      <!-- Jonas -->
       <div class="rounded-2xl overflow-hidden border border-slate-200 bg-white shadow-soft p-6 text-center transition hover:-translate-y-0.5 hover:shadow-lg">
         <img src="https://cdn.prod.website-files.com/651e9b7ad3f55464374d3cbf/6825f6544cd0d77b0c433510_Jonas.png"
              alt="Jonas Lamneck"
