--- a/index.html
+++ b/index.html
@@ -322,30 +322,72 @@
       </div>
     </section>
 
-    <!-- Logo-Wall -->
-    <section id="logos" class="py-20 sm:py-28 bg-white">
-      <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
-        <h2 class="text-3xl sm:text-4xl font-bold tracking-tight">Diese Marken vertrauen auf eFLY</h2>
-        <div class="mt-8 grid grid-cols-2 sm:grid-cols-3 md:grid-cols-4 lg:grid-cols-6 gap-6 items-center">
-          <img src="https://cdn.prod.website-files.com/651e9b79d3f55464374d3c75/6718ca9e73a7e06ce18e569c_63eb03f17c400f716d2082c8e52e755d_8.png" alt="Develey" class="h-16 w-full object-contain opacity-70 saturate-0 transition hover:opacity-100 hover:saturate-100"/>
-          <img src="https://cdn.prod.website-files.com/651e9b79d3f55464374d3c75/6718ca9e07cf275f45896349_13.png" alt="Titan" class="h-16 w-full object-contain opacity-70 saturate-0 transition hover:opacity-100 hover:saturate-100"/>
-          <img src="https://cdn.prod.website-files.com/651e9b79d3f55464374d3c75/6718ca9e73e8b461606df05f_a32a8c5ccc82fc58c70fde750a84623d_11.png" alt="Alphazoo" class="h-16 w-full object-contain opacity-70 saturate-0 transition hover:opacity-100 hover:saturate-100"/>
-          <img src="https://cdn.prod.website-files.com/651e9b79d3f55464374d3c75/6718ca9f0e26ccf806f5f712_f025d4d603e27e47859ffd5f395e734c_18.png" alt="Lillydoo" class="h-16 w-full object-contain opacity-70 saturate-0 transition hover:opacity-100 hover:saturate-100"/>
-          <img src="https://cdn.prod.website-files.com/651e9b79d3f55464374d3c75/6718ca9e8397da8b3e62236e_3.png" alt="Fackelmann" class="h-16 w-full object-contain opacity-70 saturate-0 transition hover:opacity-100 hover:saturate-100"/>
-          <img src="https://cdn.prod.website-files.com/651e9b79d3f55464374d3c75/6718ca9e12472cf8f113136e_12.png" alt="Edurino" class="h-16 w-full object-contain opacity-70 saturate-0 transition hover:opacity-100 hover:saturate-100"/>
-          <img src="https://cdn.prod.website-files.com/651e9b79d3f55464374d3c75/6718ca9fc5bda19c8549af01_4.png" alt="Weber" class="h-16 w-full object-contain opacity-70 saturate-0 transition hover:opacity-100 hover:saturate-100"/>
-          <img src="https://cdn.prod.website-files.com/651e9b79d3f55464374d3c75/6718ca9fbb70043f30e2e19c_15.png" alt="Ava&May" class="h-16 w-full object-contain opacity-70 saturate-0 transition hover:opacity-100 hover:saturate-100"/>
-          <img src="https://cdn.prod.website-files.com/651e9b79d3f55464374d3c75/6718ca9e331bfcadfc375e97_8a49847f17bd7015a5320d5a60373b4c_14.png" alt="Loewe" class="h-16 w-full object-contain opacity-70 saturate-0 transition hover:opacity-100 hover:saturate-100"/>
-          <img src="https://cdn.prod.website-files.com/651e9b79d3f55464374d3c75/6718ca9e0de0526629ec0d73_5.png" alt="Liebscher" class="h-16 w-full object-contain opacity-70 saturate-0 transition hover:opacity-100 hover:saturate-100"/>
-          <img src="https://cdn.prod.website-files.com/651e9b79d3f55464374d3c75/68d3a40b0b13386bba17d466_28.png" alt="pick'em" class="h-16 w-full object-contain opacity-70 saturate-0 transition hover:opacity-100 hover:saturate-100"/>
-          <img src="https://cdn.prod.website-files.com/651e9b79d3f55464374d3c75/68d3a40bb1127fba343b9391_27.png" alt="kip" class="h-16 w-full object-contain opacity-70 saturate-0 transition hover:opacity-100 hover:saturate-100"/>
-        </div>
-      </div>
-    </section>
-    <section id="videos" class="pt-20 sm:pt-28 pb-28 sm:pb-36">
-      <div class="ribbon-bg" aria-hidden="true"></div>
-    
-      <div class="videos-inner max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
+<!-- Logo-Wall -->
+<section id="logos" class="py-20 sm:py-28 bg-white">
+  <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
+    <h2 class="text-3xl sm:text-4xl font-bold tracking-tight">Diese Marken vertrauen auf eFLY</h2>
+
+    <div class="mt-8 grid grid-cols-2 sm:grid-cols-3 md:grid-cols-4 lg:grid-cols-6 gap-6 items-center">
+
+      <a href="https://example.com/brand/develey" target="_blank" rel="noopener" class="block">
+        <img src="https://cdn.prod.website-files.com/651e9b79d3f55464374d3c75/6718ca9e73a7e06ce18e569c_63eb03f17c400f716d2082c8e52e755d_8.png" alt="Develey" class="h-16 w-full object-contain opacity-70 saturate-0 transition hover:opacity-100 hover:saturate-100"/>
+      </a>
+
+      <a href="https://example.com/brand/titan" target="_blank" rel="noopener" class="block">
+        <img src="https://cdn.prod.website-files.com/651e9b79d3f55464374d3c75/6718ca9e07cf275f45896349_13.png" alt="Titan" class="h-16 w-full object-contain opacity-70 saturate-0 transition hover:opacity-100 hover:saturate-100"/>
+      </a>
+
+      <a href="https://example.com/brand/alphazoo" target="_blank" rel="noopener" class="block">
+        <img src="https://cdn.prod.website-files.com/651e9b79d3f55464374d3c75/6718ca9e73e8b461606df05f_a32a8c5ccc82fc58c70fde750a84623d_11.png" alt="Alphazoo" class="h-16 w-full object-contain opacity-70 saturate-0 transition hover:opacity-100 hover:saturate-100"/>
+      </a>
+
+      <a href="https://example.com/brand/lillydoo" target="_blank" rel="noopener" class="block">
+        <img src="https://cdn.prod.website-files.com/651e9b79d3f55464374d3c75/6718ca9f0e26ccf806f5f712_f025d4d603e27e47859ffd5f395e734c_18.png" alt="Lillydoo" class="h-16 w-full object-contain opacity-70 saturate-0 transition hover:opacity-100 hover:saturate-100"/>
+      </a>
+
+      <a href="https://example.com/brand/fackelmann" target="_blank" rel="noopener" class="block">
+        <img src="https://cdn.prod.website-files.com/651e9b79d3f55464374d3c75/6718ca9e8397da8b3e62236e_3.png" alt="Fackelmann" class="h-16 w-full object-contain opacity-70 saturate-0 transition hover:opacity-100 hover:saturate-100"/>
+      </a>
+
+      <a href="https://example.com/brand/edurino" target="_blank" rel="noopener" class="block">
+        <img src="https://cdn.prod.website-files.com/651e9b79d3f55464374d3c75/6718ca9e12472cf8f113136e_12.png" alt="Edurino" class="h-16 w-full object-contain opacity-70 saturate-0 transition hover:opacity-100 hover:saturate-100"/>
+      </a>
+
+      <a href="https://example.com/brand/weber" target="_blank" rel="noopener" class="block">
+        <img src="https://cdn.prod.website-files.com/651e9b79d3f55464374d3c75/6718ca9fc5bda19c8549af01_4.png" alt="Weber" class="h-16 w-full object-contain opacity-70 saturate-0 transition hover:opacity-100 hover:saturate-100"/>
+      </a>
+
+      <a href="https://example.com/brand/ava-may" target="_blank" rel="noopener" class="block">
+        <img src="https://cdn.prod.website-files.com/651e9b79d3f55464374d3c75/6718ca9fbb70043f30e2e19c_15.png" alt="Ava&May" class="h-16 w-full object-contain opacity-70 saturate-0 transition hover:opacity-100 hover:saturate-100"/>
+      </a>
+
+      <a href="https://example.com/brand/loewe" target="_blank" rel="noopener" class="block">
+        <img src="https://cdn.prod.website-files.com/651e9b79d3f55464374d3c75/6718ca9e331bfcadfc375e97_8a49847f17bd7015a5320d5a60373b4c_14.png" alt="Loewe" class="h-16 w-full object-contain opacity-70 saturate-0 transition hover:opacity-100 hover:saturate-100"/>
+      </a>
+
+      <a href="https://example.com/brand/liebscher" target="_blank" rel="noopener" class="block">
+        <img src="https://cdn.prod.website-files.com/651e9b79d3f55464374d3c75/6718ca9e0de0526629ec0d73_5.png" alt="Liebscher" class="h-16 w-full object-contain opacity-70 saturate-0 transition hover:opacity-100 hover:saturate-100"/>
+      </a>
+
+      <a href="https://example.com/brand/pickem" target="_blank" rel="noopener" class="block">
+        <img src="https://cdn.prod.website-files.com/651e9b79d3f55464374d3c75/68d3a40b0b13386bba17d466_28.png" alt="pick'em" class="h-16 w-full object-contain opacity-70 saturate-0 transition hover:opacity-100 hover:saturate-100"/>
+      </a>
+
+      <a href="https://example.com/brand/kip" target="_blank" rel="noopener" class="block">
+        <img src="https://cdn.prod.website-files.com/651e9b79d3f55464374d3c75/68d3a40bb1127fba343b9391_27.png" alt="kip" class="h-16 w-full object-contain opacity-70 saturate-0 transition hover:opacity-100 hover:saturate-100"/>
+      </a>
+
+    </div>
+  </div>
+</section>
+
+
+
+<section id="videos" class="pt-20 sm:pt-28 pb-28 sm:pb-36">
+  <div class="ribbon-bg" aria-hidden="true"></div>
+
+  <div class="videos-inner max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
+
      
         <div class="flex items-end justify-between gap-4">
           <div>
@@ -801,17 +843,78 @@
 
 
   const contentItems = [
-  { src: "https://res.cloudinary.com/dujghnaly/image/upload/v1758482205/07_Ma%CC%88rklin_Markengeschichte_ufvqkz.png", alt: "Märklin Markengeschichte", href: "https://www.maerklinshop.de/" },
-  { src: "https://res.cloudinary.com/dujghnaly/image/upload/v1758482205/01_STUR_Galeriebilder_m17hws.png", alt: "STUR Galeriebilder", href: "https://sturcookware.de/" },
-  { src: "https://res.cloudinary.com/dujghnaly/image/upload/v1758482205/03_everydays_Galeriebilder_vbq1gw.png", alt: "everydays Galeriebilder", href: "https://www.everydays.de/" },
-  { src: "https://res.cloudinary.com/dujghnaly/image/upload/v1758482205/10_Liquid_Elements_Brand_Store_wv7hez.png", alt: "Liquid Elements Brand Store", href: "https://www.liquidelements.de/" },
-  { src: "https://res.cloudinary.com/dujghnaly/image/upload/v1758482205/06_Palado_Markengeschichte_g0mlpa.png", alt: "Palado Markengeschichte", href: "https://paladoshoes.com/" },
-  { src: "https://res.cloudinary.com/dujghnaly/image/upload/v1758482205/08_Festool_Brand_Store_c4cnz3.png", alt: "Festool Brand Store", href: "https://www.festool.de/" },
-  { src: "https://res.cloudinary.com/dujghnaly/image/upload/v1758482205/05_IONIQ_A_Content_wobhk5.png", alt: "IONIQ A+ Content", href: "https://ioniqskin.com/" },
-  { src: "https://res.cloudinary.com/dujghnaly/image/upload/v1758482204/09_Dr._Beckmann_Brand_Store_djyayg.png", alt: "Dr. Beckmann Brand Store", href: "https://www.dr-beckmann.com/de-de/" },
-  { src: "https://res.cloudinary.com/dujghnaly/image/upload/v1758482204/02_MaHo_Galeriebilder_t2qlk9.png", alt: "MaHo Galeriebilder", href: "https://magicholz.de/" },
-  { src: "https://res.cloudinary.com/dujghnaly/image/upload/v1758482204/04_Juno_me_A_Content_wgcuaj.png", alt: "juno&me A+ Content", href: "https://junoandme.de/" }
+  {
+    src: "https://res.cloudinary.com/dujghnaly/image/upload/v1758482205/07_Ma%CC%88rklin_Markengeschichte_ufvqkz.png",
+    alt: "Märklin Markengeschichte",
+    href: "https://www.maerklinshop.de/",
+    sidePoster: "https://res.cloudinary.com/dujghnaly/image/upload/v1758482205/07_Ma%CC%88rklin_Markengeschichte_ufvqkz.png",
+    sideHref: "https://www.maerklinshop.de/"
+  },
+  {
+    src: "https://res.cloudinary.com/dujghnaly/image/upload/v1758482205/01_STUR_Galeriebilder_m17hws.png",
+    alt: "STUR Galeriebilder",
+    href: "https://sturcookware.de/",
+    sidePoster: "https://res.cloudinary.com/dujghnaly/image/upload/v1758482205/01_STUR_Galeriebilder_m17hws.png",
+    sideHref: "https://sturcookware.de/"
+  },
+  {
+    src: "https://res.cloudinary.com/dujghnaly/image/upload/v1758482205/03_everydays_Galeriebilder_vbq1gw.png",
+    alt: "everydays Galeriebilder",
+    href: "https://www.everydays.de/",
+    sidePoster: "https://res.cloudinary.com/dujghnaly/image/upload/v1758482205/03_everydays_Galeriebilder_vbq1gw.png",
+    sideHref: "https://www.everydays.de/"
+  },
+  {
+    src: "https://res.cloudinary.com/dujghnaly/image/upload/v1758482205/10_Liquid_Elements_Brand_Store_wv7hez.png",
+    alt: "Liquid Elements Brand Store",
+    href: "https://www.liquidelements.de/",
+    sidePoster: "https://res.cloudinary.com/dujghnaly/image/upload/v1758482205/10_Liquid_Elements_Brand_Store_wv7hez.png",
+    sideHref: "https://www.liquidelements.de/"
+  },
+  {
+    src: "https://res.cloudinary.com/dujghnaly/image/upload/v1758482205/06_Palado_Markengeschichte_g0mlpa.png",
+    alt: "Palado Markengeschichte",
+    href: "https://paladoshoes.com/",
+    sidePoster: "https://res.cloudinary.com/dujghnaly/image/upload/v1758482205/06_Palado_Markengeschichte_g0mlpa.png",
+    sideHref: "https://paladoshoes.com/"
+  },
+  {
+    src: "https://res.cloudinary.com/dujghnaly/image/upload/v1758482205/08_Festool_Brand_Store_c4cnz3.png",
+    alt: "Festool Brand Store",
+    href: "https://www.festool.de/",
+    sidePoster: "https://res.cloudinary.com/dujghnaly/image/upload/v1758482205/08_Festool_Brand_Store_c4cnz3.png",
+    sideHref: "https://www.festool.de/"
+  },
+  {
+    src: "https://res.cloudinary.com/dujghnaly/image/upload/v1758482205/05_IONIQ_A_Content_wobhk5.png",
+    alt: "IONIQ A+ Content",
+    href: "https://ioniqskin.com/",
+    sidePoster: "https://res.cloudinary.com/dujghnaly/image/upload/v1758482205/05_IONIQ_A_Content_wobhk5.png",
+    sideHref: "https://ioniqskin.com/"
+  },
+  {
+    src: "https://res.cloudinary.com/dujghnaly/image/upload/v1758482204/09_Dr._Beckmann_Brand_Store_djyayg.png",
+    alt: "Dr. Beckmann Brand Store",
+    href: "https://www.dr-beckmann.com/de-de/",
+    sidePoster: "https://res.cloudinary.com/dujghnaly/image/upload/v1758482204/09_Dr._Beckmann_Brand_Store_djyayg.png",
+    sideHref: "https://www.dr-beckmann.com/de-de/"
+  },
+  {
+    src: "https://res.cloudinary.com/dujghnaly/image/upload/v1758482204/02_MaHo_Galeriebilder_t2qlk9.png",
+    alt: "MaHo Galeriebilder",
+    href: "https://magicholz.de/",
+    sidePoster: "https://res.cloudinary.com/dujghnaly/image/upload/v1758482204/02_MaHo_Galeriebilder_t2qlk9.png",
+    sideHref: "https://magicholz.de/"
+  },
+  {
+    src: "https://res.cloudinary.com/dujghnaly/image/upload/v1758482204/04_Juno_me_A_Content_wgcuaj.png",
+    alt: "juno&me A+ Content",
+    href: "https://junoandme.de/",
+    sidePoster: "https://res.cloudinary.com/dujghnaly/image/upload/v1758482204/04_Juno_me_A_Content_wgcuaj.png",
+    sideHref: "https://junoandme.de/"
+  }
 ];
+
   if (!contentItems.length) return;
 
   const mod = (n, m) => ((n % m) + m) % m;
@@ -820,15 +923,23 @@
   const DURATION = 520;
   const SHIFT = '-33.333%';
   function cardHTML(item, { center = false } = {}) {
+  const href = center ? (item.href || '#') : (item.sideHref || item.href || '#');
+  const imgSrc = center ? item.src : (item.sidePoster || item.src);
+
+  const imgClasses = center
+    ? 'object-cover'
+    : 'object-contain p-6 bg-white';
+
   return `
-    <a href="${item.href}" target="_blank" rel="noopener"
+    <a href="${href}" target="_blank" rel="noopener"
        class="block aspect-video relative rounded-xl overflow-hidden focus:outline-none focus:ring-2 focus:ring-efly/50 cursor-pointer"
        aria-label="${item.alt}">
-      <img src="${item.src}" alt="${item.alt}"
-           class="absolute inset-0 h-full w-full object-cover ${center ? '' : 'opacity-90 grayscale-[20%]'}">
+      <img src="${imgSrc}" alt="${item.alt}"
+           class="absolute inset-0 h-full w-full ${imgClasses}">
     </a>
   `;
 }
+
 
 
   function render() {
