--- a/index.html
+++ b/index.html
@@ -530,7 +530,7 @@
             <div class="col-span-12 lg:col-span-6 lg:pr-12">
               <div class="step-box rounded-2xl bg-white border border-slate-200 shadow-soft p-6">
                 <div class="text-sm font-semibold text-efly">Schritt 1</div>
-                <h3 class="mt-1 font-semibold text-slate-900">Gemeinsame definierung der KPIs</h3>
+                <h3 class="mt-1 font-semibold text-slate-900">Gemeinsame Definierung der KPIs</h3>
               </div>
             </div>
             <div class="hidden lg:block lg:col-span-6"></div>
