--- a/index.html
+++ b/index.html
@@ -255,7 +255,6 @@
 
           <!-- Hauptnavigation (Desktop) -->
           <nav class="hidden md:flex items-center gap-6 text-sm">
-            <a href="#logos" class="hover:text-brand-600">Referenzen Logos</a>
             <a href="#videos" class="hover:text-brand-600">Videos</a>
             <a href="#bilder" class="hover:text-brand-600">Bilder</a>
             <a href="#prozess" class="hover:text-brand-600">Ablauf</a>
@@ -444,6 +443,17 @@
                      muted playsinline preload="none"
                      poster="https://res.cloudinary.com/dujghnaly/image/upload/v1758481363/Afri_Cola_f6pqt9.jpg">
                 <source src="https://res.cloudinary.com/dujghnaly/video/upload/f_mp4,q_auto,vc_auto/AFRI_ui4vc4.mp4" type="video/mp4" />
+              </video>
+            </div>
+          </article>
+
+
+          <article class="group relative w-full rounded-2xl overflow-hidden bg-white border border-slate-200 shadow-soft hover:shadow-lg transition-transform duration-300 will-change-transform hover:scale-[1.06]">
+            <div class="aspect-video relative">
+              <video class="hover-video absolute inset-0 h-full w-full object-cover"
+                     muted playsinline preload="none"
+                     poster="https://res.cloudinary.com/dujghnaly/image/upload/v1758481364/Rhodius_v1gimj.jpg">
+                <source src="https://res.cloudinary.com/dujghnaly/video/upload/f_mp4,q_auto,vc_auto/RHODIUS_et3ds2.mp4" type="video/mp4" />
               </video>
             </div>
           </article>
@@ -839,72 +849,72 @@
   {
     src: "https://res.cloudinary.com/dujghnaly/image/upload/v1758482205/07_Ma%CC%88rklin_Markengeschichte_ufvqkz.png",
     alt: "Märklin Markengeschichte",
-    href: "https://www.maerklinshop.de/",
+    href: "https://www.amazon.de/stores/GebrM%C3%A4rklinCieGmbH/page/A0BED9F1-C8DF-4C4E-9BB0-D763D545CF61",
     sidePoster: "https://res.cloudinary.com/dujghnaly/image/upload/v1758482205/07_Ma%CC%88rklin_Markengeschichte_ufvqkz.png",
-    sideHref: "https://www.maerklinshop.de/"
+    sideHref: "https://www.amazon.de/stores/GebrM%C3%A4rklinCieGmbH/page/A0BED9F1-C8DF-4C4E-9BB0-D763D545CF61"
   },
   {
     src: "https://res.cloudinary.com/dujghnaly/image/upload/v1758482205/01_STUR_Galeriebilder_m17hws.png",
     alt: "STUR Galeriebilder",
-    href: "https://sturcookware.de/",
+    href: "https://www.amazon.de/stores/STUR/page/52F21D4F-3375-4E7C-800B-8C82FA59AC05",
     sidePoster: "https://res.cloudinary.com/dujghnaly/image/upload/v1758482205/01_STUR_Galeriebilder_m17hws.png",
-    sideHref: "https://sturcookware.de/"
+    sideHref: "https://www.amazon.de/stores/STUR/page/52F21D4F-3375-4E7C-800B-8C82FA59AC05"
   },
   {
     src: "https://res.cloudinary.com/dujghnaly/image/upload/v1758482205/03_everydays_Galeriebilder_vbq1gw.png",
     alt: "everydays Galeriebilder",
-    href: "https://www.everydays.de/",
+    href: "https://www.amazon.de/stores/page/E226705E-9CE6-428B-A1E5-64F1DF0796D1",
     sidePoster: "https://res.cloudinary.com/dujghnaly/image/upload/v1758482205/03_everydays_Galeriebilder_vbq1gw.png",
-    sideHref: "https://www.everydays.de/"
+    sideHref: "https://www.amazon.de/stores/page/E226705E-9CE6-428B-A1E5-64F1DF0796D1"
   },
   {
     src: "https://res.cloudinary.com/dujghnaly/image/upload/v1758482205/10_Liquid_Elements_Brand_Store_wv7hez.png",
     alt: "Liquid Elements Brand Store",
-    href: "https://www.liquidelements.de/",
+    href: "https://www.amazon.de/stores/page/E7B2172E-1EB4-4F99-A53A-5CCDC086B518",
     sidePoster: "https://res.cloudinary.com/dujghnaly/image/upload/v1758482205/10_Liquid_Elements_Brand_Store_wv7hez.png",
-    sideHref: "https://www.liquidelements.de/"
+    sideHref: "https://www.amazon.de/stores/page/E7B2172E-1EB4-4F99-A53A-5CCDC086B518"
   },
   {
     src: "https://res.cloudinary.com/dujghnaly/image/upload/v1758482205/06_Palado_Markengeschichte_g0mlpa.png",
     alt: "Palado Markengeschichte",
-    href: "https://paladoshoes.com/",
+    href: "https://www.amazon.de/stores/page/8348CBB3-1BD3-47F8-967C-5EDF98E293FD",
     sidePoster: "https://res.cloudinary.com/dujghnaly/image/upload/v1758482205/06_Palado_Markengeschichte_g0mlpa.png",
-    sideHref: "https://paladoshoes.com/"
+    sideHref: "https://www.amazon.de/stores/page/8348CBB3-1BD3-47F8-967C-5EDF98E293FD"
   },
   {
     src: "https://res.cloudinary.com/dujghnaly/image/upload/v1758482205/08_Festool_Brand_Store_c4cnz3.png",
     alt: "Festool Brand Store",
-    href: "https://www.festool.de/",
+    href: "https://www.amazon.de/stores/page/D45E4F0D-D72A-4E37-A7C2-B235B8C3F581",
     sidePoster: "https://res.cloudinary.com/dujghnaly/image/upload/v1758482205/08_Festool_Brand_Store_c4cnz3.png",
-    sideHref: "https://www.festool.de/"
+    sideHref: "https://www.amazon.de/stores/page/D45E4F0D-D72A-4E37-A7C2-B235B8C3F581"
   },
   {
     src: "https://res.cloudinary.com/dujghnaly/image/upload/v1758482205/05_IONIQ_A_Content_wobhk5.png",
     alt: "IONIQ A+ Content",
-    href: "https://ioniqskin.com/",
+    href: "https://www.amazon.de/stores/page/FD4791E2-890B-4E5D-BD02-78A7D0135290",
     sidePoster: "https://res.cloudinary.com/dujghnaly/image/upload/v1758482205/05_IONIQ_A_Content_wobhk5.png",
-    sideHref: "https://ioniqskin.com/"
+    sideHref: "https://www.amazon.de/stores/page/FD4791E2-890B-4E5D-BD02-78A7D0135290"
   },
   {
     src: "https://res.cloudinary.com/dujghnaly/image/upload/v1758482204/09_Dr._Beckmann_Brand_Store_djyayg.png",
     alt: "Dr. Beckmann Brand Store",
-    href: "https://www.dr-beckmann.com/de-de/",
+    href: "https://www.amazon.de/stores/page/EFAB658B-06F0-4ED0-A122-B2FC627A9C83",
     sidePoster: "https://res.cloudinary.com/dujghnaly/image/upload/v1758482204/09_Dr._Beckmann_Brand_Store_djyayg.png",
-    sideHref: "https://www.dr-beckmann.com/de-de/"
+    sideHref: "https://www.amazon.de/stores/page/EFAB658B-06F0-4ED0-A122-B2FC627A9C83"
   },
   {
     src: "https://res.cloudinary.com/dujghnaly/image/upload/v1758482204/02_MaHo_Galeriebilder_t2qlk9.png",
     alt: "MaHo Galeriebilder",
-    href: "https://magicholz.de/",
+    href: "https://www.amazon.de/stores/MaHo/page/4280C26E-B0B8-49FE-8407-2F0F3B9A8391",
     sidePoster: "https://res.cloudinary.com/dujghnaly/image/upload/v1758482204/02_MaHo_Galeriebilder_t2qlk9.png",
-    sideHref: "https://magicholz.de/"
+    sideHref: "https://www.amazon.de/stores/MaHo/page/4280C26E-B0B8-49FE-8407-2F0F3B9A8391"
   },
   {
     src: "https://res.cloudinary.com/dujghnaly/image/upload/v1758482204/04_Juno_me_A_Content_wgcuaj.png",
     alt: "juno&me A+ Content",
-    href: "https://junoandme.de/",
+    href: "https://www.amazon.de/stores/junome/page/17BED259-A095-4263-88EF-6252B438E562",
     sidePoster: "https://res.cloudinary.com/dujghnaly/image/upload/v1758482204/04_Juno_me_A_Content_wgcuaj.png",
-    sideHref: "https://junoandme.de/"
+    sideHref: "https://www.amazon.de/stores/junome/page/17BED259-A095-4263-88EF-6252B438E562"
   }
 ];
 
